--- a/CodeWars.CSharp/CodeWars.CSharp.csproj
+++ b/CodeWars.CSharp/CodeWars.CSharp.csproj
@@ -41,17 +41,42 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="8kyu\AreYouPlayingBanjo.cs" />
     <Compile Include="8kyu\BasicMathematicalOperations.cs" />
+    <Compile Include="8kyu\CalculateAverage.cs" />
+    <Compile Include="8kyu\ColorGhost.cs" />
+    <Compile Include="8kyu\ConvertBooleanValuesToStringsYesOrNo.cs" />
+    <Compile Include="8kyu\CountByX.cs" />
     <Compile Include="8kyu\DoubleChar.cs" />
     <Compile Include="8kyu\EvenOrOdd.cs" />
+    <Compile Include="8kyu\FakeBinary.cs" />
+    <Compile Include="8kyu\FilteringEvenNumbersBugFixes.cs" />
+    <Compile Include="8kyu\Function1HelloWorld.cs" />
+    <Compile Include="8kyu\GrasshopperArrayMean.cs" />
+    <Compile Include="8kyu\GrasshopperBugSquashing.cs" />
+    <Compile Include="8kyu\GrasshopperGradeBook.cs" />
+    <Compile Include="8kyu\GrasshopperMessiGoals.cs" />
     <Compile Include="8kyu\KeepUpTheHoop.cs" />
     <Compile Include="8kyu\Multiply.cs" />
     <Compile Include="8kyu\NumberOfPeopleInTheBus.cs" />
+    <Compile Include="8kyu\OnlineRpgPlayerToQualifyingStage.cs" />
+    <Compile Include="8kyu\PlayingWithCubes.cs" />
     <Compile Include="8kyu\PowersOf2.cs" />
     <Compile Include="8kyu\PreFizzBuzzWorkout1.cs" />
+    <Compile Include="8kyu\RegularBallSuperBall.cs" />
+    <Compile Include="8kyu\ReturnNegative.cs" />
     <Compile Include="8kyu\ReversingWordsInAString.cs" />
     <Compile Include="8kyu\StringRepeat.cs" />
+    <Compile Include="8kyu\StriveMatching1.cs" />
+    <Compile Include="8kyu\SwitchCaseBugFixing6.cs" />
+    <Compile Include="8kyu\TakeAnArrowToTheKneeFunctionally.cs" />
+    <Compile Include="8kyu\TemplateStrings.cs" />
     <Compile Include="8kyu\ToSquareRootOrNotToSquareRoot.cs" />
+    <Compile Include="8kyu\UnfinishedLoopBugFixing1.cs" />
+    <Compile Include="8kyu\VowelRemover.cs" />
+    <Compile Include="8kyu\Watermelon.cs" />
+    <Compile Include="8kyu\WhatIsBetween.cs" />
+    <Compile Include="8kyu\WilsonPrimes.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
