--- a/CodeWars.CSharp/CodeWars.CSharp.csproj
+++ b/CodeWars.CSharp/CodeWars.CSharp.csproj
@@ -57,6 +57,7 @@
     <Compile Include="8kyu\GrasshopperGradeBook.cs" />
     <Compile Include="8kyu\GrasshopperMessiGoals.cs" />
     <Compile Include="8kyu\KeepUpTheHoop.cs" />
+    <Compile Include="8kyu\LocalizeTheBarycenterOfATriangle.cs" />
     <Compile Include="8kyu\Multiply.cs" />
     <Compile Include="8kyu\NumberOfPeopleInTheBus.cs" />
     <Compile Include="8kyu\OnlineRpgPlayerToQualifyingStage.cs" />
@@ -66,6 +67,8 @@
     <Compile Include="8kyu\RegularBallSuperBall.cs" />
     <Compile Include="8kyu\ReturnNegative.cs" />
     <Compile Include="8kyu\ReversingWordsInAString.cs" />
+    <Compile Include="8kyu\RockPaperScissors.cs" />
+    <Compile Include="8kyu\SmallestUnusedId.cs" />
     <Compile Include="8kyu\StringRepeat.cs" />
     <Compile Include="8kyu\StriveMatching1.cs" />
     <Compile Include="8kyu\SwitchCaseBugFixing6.cs" />
