Added a few more solved katas

--- a/CodeWars.CSharp/CodeWars.CSharp.csproj
+++ b/CodeWars.CSharp/CodeWars.CSharp.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="8kyu\AB.cs" />
     <Compile Include="8kyu\AddMoreItemToListBugFixes.cs" />
     <Compile Include="8kyu\AreYouPlayingBanjo.cs" />
     <Compile Include="8kyu\BasicMathematicalOperations.cs" />
@@ -52,12 +53,15 @@
     <Compile Include="8kyu\EvenOrOdd.cs" />
     <Compile Include="8kyu\FakeBinary.cs" />
     <Compile Include="8kyu\FilteringEvenNumbersBugFixes.cs" />
+    <Compile Include="8kyu\FindTheSlope.cs" />
     <Compile Include="8kyu\FinishGuessTheNumberGame.cs" />
     <Compile Include="8kyu\Function1HelloWorld.cs" />
     <Compile Include="8kyu\GrasshopperArrayMean.cs" />
     <Compile Include="8kyu\GrasshopperBugSquashing.cs" />
+    <Compile Include="8kyu\GrasshopperDebugSayHello.cs" />
     <Compile Include="8kyu\GrasshopperGradeBook.cs" />
     <Compile Include="8kyu\GrasshopperMessiGoals.cs" />
+    <Compile Include="8kyu\HowGoodAreYouReally.cs" />
     <Compile Include="8kyu\HowOldWillIBeIn2099.cs" />
     <Compile Include="8kyu\KeepUpTheHoop.cs" />
     <Compile Include="8kyu\LocalizeTheBarycenterOfATriangle.cs" />
@@ -70,6 +74,7 @@
     <Compile Include="8kyu\PreFizzBuzzWorkout1.cs" />
     <Compile Include="8kyu\RegexCountLowercaseLetters.cs" />
     <Compile Include="8kyu\RegularBallSuperBall.cs" />
+    <Compile Include="8kyu\RemovingElements.cs" />
     <Compile Include="8kyu\ReturnNegative.cs" />
     <Compile Include="8kyu\ReversingWordsInAString.cs" />
     <Compile Include="8kyu\RockPaperScissors.cs" />
@@ -84,6 +89,7 @@
     <Compile Include="8kyu\UnfinishedLoopBugFixing1.cs" />
     <Compile Include="8kyu\VowelRemover.cs" />
     <Compile Include="8kyu\Watermelon.cs" />
+    <Compile Include="8kyu\Welcome.cs" />
     <Compile Include="8kyu\WhatIsBetween.cs" />
     <Compile Include="8kyu\WilsonPrimes.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
